# Neet_omr_checker

./: .env  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt
artifacts/api-server/: package.json
artifacts/api-server/src/routes/: index.ts  omr.ts
artifacts/mockup-sandbox/: vite.config.ts
artifacts/neet-omr-checker/: ai_analyzer.py  app.py  neet_scorer.py  omr_api_cli.py  omr_processor.py  requirements.txt
artifacts/neet-omr-checker/.streamlit/: secrets.toml.example
artifacts/neet-omr-checker/uploads/answer_key/: answer_key.json
uploads/answer_key/: answer_key.json
